--- a/index.html
+++ b/index.html
@@ -67,5 +67,6 @@
     <div id="root" class="flex items-center justify-center min-h-screen text-cyber-cyan font-mono">
       [SYSTEM] INITIALIZING DARKTRACE PROTOCOLS...
     </div>
+    <script type="module" src="/App.tsx"></script>
   </body>
 </html>
