--- a/index.html
+++ b/index.html
@@ -50,23 +50,26 @@
         background: #334155;
       }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "framer-motion": "https://esm.sh/framer-motion@^12.31.0",
-    "react-dom/client": "https://esm.sh/react-dom@^19.2.4/client",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0"
+    "react": "https://esm.sh/react@18.2.0",
+    "react/": "https://esm.sh/react@18.2.0/",
+    "react-dom": "https://esm.sh/react-dom@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "framer-motion": "https://esm.sh/framer-motion@10.16.4?deps=react@18.2.0,react-dom@18.2.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.263.1?deps=react@18.2.0",
+    "firebase/app": "https://esm.sh/firebase@10.8.0/app",
+    "firebase/analytics": "https://esm.sh/firebase@10.8.0/analytics",
+    "firebase/": "https://esm.sh/firebase@10.8.0/",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
   }
 }
 </script>
-</head>
+  </head>
   <body>
     <div id="root" class="flex items-center justify-center min-h-screen text-cyber-cyan font-mono">
       [SYSTEM] INITIALIZING DARKTRACE PROTOCOLS...
     </div>
-    <script type="module" src="/App.tsx"></script>
   </body>
 </html>
