--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="G9uMdEWLq0C2PQd95jlk78WQ8fBojow_531qieS_pO8" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DarkTrace // SY0-701 Wargame</title>
@@ -73,6 +74,8 @@
     <div id="root" class="flex items-center justify-center min-h-screen text-cyber-cyan font-mono">
       [SYSTEM] INITIALIZING DARKTRACE PROTOCOLS...
     </div>
+      <h1>Project Home</h1>
+  <a href="https://github.com/mythofkas-commits/DarkTrace">View Source Code</a>
     <script type="module" src="/App.tsx"></script>
   </body>
 </html>
